--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -175,9 +175,9 @@
                 <label for="sector">Sector Laboral *</label>
                 <select id="sector" name="sector" required>
                     <option value="">Selecciona un sector</option>
-                    <option value="publico">Publico</option>
-                    <option value="privado">Privado</option>
-                    <option value="otro">Otro</option>
+                    <option value="publico">Sector Publico</option>
+                    <option value="privado">Sector Privado</option>
+                    <option value="otro">En lo Propio</option>
                 </select>
                 <p class="error-text" id="sector-error"></p>
             </div>
