--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -10,52 +10,65 @@
             margin: 0;
             padding: 0;
         }
+        html {
+            font-size: 16px;
+            -webkit-text-size-adjust: 100%;
+        }
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             min-height: 100vh;
+            min-height: -webkit-fill-available;
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 20px;
+            padding: 16px;
         }
         .container {
             background: white;
             border-radius: 12px;
             box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-            padding: 40px;
+            padding: 32px 24px;
             width: 100%;
             max-width: 450px;
         }
         h1 {
             color: #1a1a2e;
-            font-size: 24px;
-            margin-bottom: 8px;
+            font-size: 22px;
+            margin-bottom: 6px;
             text-align: center;
         }
         .subtitle {
             color: #6b7280;
-            font-size: 14px;
+            font-size: 13px;
             text-align: center;
-            margin-bottom: 32px;
+            margin-bottom: 24px;
         }
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 16px;
         }
         label {
             display: block;
-            font-size: 14px;
+            font-size: 13px;
             font-weight: 600;
             color: #374151;
-            margin-bottom: 6px;
+            margin-bottom: 5px;
         }
         input, select {
             width: 100%;
-            padding: 12px 14px;
+            padding: 12px;
             border: 2px solid #e5e7eb;
             border-radius: 8px;
-            font-size: 16px;
+            font-size: 16px; /* Prevents iOS zoom on focus */
             transition: border-color 0.2s, box-shadow 0.2s;
+            -webkit-appearance: none;
+            appearance: none;
+        }
+        select {
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='0 0 12 12'%3E%3Cpath fill='%236b7280' d='M6 8L1 3h10z'/%3E%3C/svg%3E");
+            background-repeat: no-repeat;
+            background-position: right 12px center;
+            padding-right: 36px;
         }
         input:focus, select:focus {
             outline: none;
@@ -66,9 +79,9 @@
             color: #9ca3af;
         }
         .hint {
-            font-size: 12px;
+            font-size: 11px;
             color: #6b7280;
-            margin-top: 4px;
+            margin-top: 3px;
         }
         button {
             width: 100%;
@@ -81,7 +94,8 @@
             font-weight: 600;
             cursor: pointer;
             transition: transform 0.2s, box-shadow 0.2s;
-            margin-top: 10px;
+            margin-top: 8px;
+            -webkit-tap-highlight-color: transparent;
         }
         button:hover {
             transform: translateY(-2px);
@@ -89,11 +103,71 @@
         }
         button:active {
             transform: translateY(0);
+            background: linear-gradient(135deg, #5a6fd6 0%, #6a4190 100%);
         }
         button:disabled {
             opacity: 0.7;
             cursor: not-allowed;
             transform: none;
+        }
+
+        /* iPhone SE and small devices (320px - 375px) */
+        @media screen and (max-width: 375px) {
+            body {
+                padding: 12px;
+                align-items: flex-start;
+                padding-top: 24px;
+            }
+            .container {
+                padding: 24px 16px;
+                border-radius: 10px;
+            }
+            h1 {
+                font-size: 20px;
+            }
+            .subtitle {
+                font-size: 12px;
+                margin-bottom: 20px;
+            }
+            .form-group {
+                margin-bottom: 14px;
+            }
+            label {
+                font-size: 12px;
+            }
+            input, select {
+                padding: 10px;
+                border-radius: 6px;
+            }
+            .hint {
+                font-size: 10px;
+            }
+            button {
+                padding: 12px;
+                font-size: 15px;
+            }
+        }
+
+        /* Very small devices (iPhone 4/5 era) */
+        @media screen and (max-width: 320px) {
+            body {
+                padding: 8px;
+            }
+            .container {
+                padding: 20px 12px;
+            }
+            h1 {
+                font-size: 18px;
+            }
+        }
+
+        /* Safe area for notched devices */
+        @supports (padding: max(0px)) {
+            body {
+                padding-left: max(16px, env(safe-area-inset-left));
+                padding-right: max(16px, env(safe-area-inset-right));
+                padding-bottom: max(16px, env(safe-area-inset-bottom));
+            }
         }
         .alert {
             padding: 12px 16px;
