--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -13,12 +13,13 @@
         html {
             font-size: 16px;
             -webkit-text-size-adjust: 100%;
+            min-height: 100%;
         }
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            min-height: 100vh;
-            min-height: -webkit-fill-available;
+            background-attachment: fixed;
+            min-height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
