agregar tse a form

--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -618,7 +618,8 @@
                 cedula: document.getElementById('cedula').value,
                 email: document.getElementById('email').value,
                 phone: document.getElementById('phone').value,
-                sector: document.getElementById('sector').value
+                sector: document.getElementById('sector').value,
+                whatsapp: document.getElementById('phone').value
             };
 
             // Agregar datos de nombre segun origen
