--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -341,6 +341,15 @@
                 <p><strong>Apellidos:</strong> <span id="tseApellidos"></span></p>
             </div>
 
+            <!-- TSE Confirmation -->
+            <div class="switch-group hidden" id="tseConfirmation">
+                <span class="switch-label" id="tseConfirmationLabel"></span>
+                <label class="switch">
+                    <input type="checkbox" id="tseConfirmSwitch">
+                    <span class="slider"></span>
+                </label>
+            </div>
+
             <!-- Switch para extranjero -->
             <div class="switch-group hidden" id="extranjeroSwitch">
                 <span class="switch-label">Es extranjero?</span>
@@ -433,40 +442,53 @@
         let tseData = null;
         let tseLookupDone = false;
         let lastCedulaLookup = '';
+        let userConfirmedTse = false;
 
-        // Listener para cedula - buscar en TSE cuando tenga 9 digitos
+        const formFieldsToManage = ['nombre', 'apellido1', 'apellido2', 'email', 'phone', 'sector'];
+
+        function setFieldsDisabled(disabled) {
+            formFieldsToManage.forEach(id => {
+                const field = document.getElementById(id);
+                if (field) field.disabled = disabled;
+            });
+            document.getElementById('submitBtn').disabled = disabled;
+        }
+
+        // Initialize form on load
+        document.addEventListener('DOMContentLoaded', () => {
+            setFieldsDisabled(true);
+             document.getElementById('extranjeroFields').classList.remove('visible');
+        });
+
+        // Listener para cedula
         document.getElementById('cedula').addEventListener('input', function(e) {
             const rawCedula = e.target.value.replace(/[^0-9]/g, '');
             if (rawCedula.length === 9 && rawCedula !== lastCedulaLookup) {
                 lastCedulaLookup = rawCedula;
                 lookupTSE(rawCedula);
+            } else if (rawCedula.length < 9 && lastCedulaLookup) {
+                resetForm();
+                document.getElementById('cedula').value = rawCedula;
             }
         });
 
         // Buscar en TSE API
         async function lookupTSE(cedula) {
             const tseInfo = document.getElementById('tseInfo');
-            const extranjeroSwitch = document.getElementById('extranjeroSwitch');
             const tseLoading = document.getElementById('tseLoading');
+            const extranjeroSwitch = document.getElementById('extranjeroSwitch');
+            const tseConfirmation = document.getElementById('tseConfirmation');
+            const tseConfirmationLabel = document.getElementById('tseConfirmationLabel');
 
-            tseData = null;
-            tseLookupDone = false;
-
-            // Mostrar loading, ocultar info anterior
+            resetForm(false); // Soft reset
             tseLoading.style.display = 'block';
-            tseInfo.classList.remove('visible');
-            extranjeroSwitch.classList.add('hidden');
-            document.getElementById('extranjeroFields').classList.remove('visible');
-            document.getElementById('isExtranjero').checked = false;
 
             try {
                 const response = await fetch(TSE_API_URL + cedula);
                 const data = await response.json();
-
                 tseLoading.style.display = 'none';
 
                 if (data.success && data.nombre) {
-                    // TSE encontro la persona
                     tseData = {
                         nombre: data.nombre,
                         apellido1: data.apellido1,
@@ -476,23 +498,46 @@
                     };
                     tseLookupDone = true;
 
-                    // Mostrar info del TSE
                     document.getElementById('tseNombre').textContent = data.nombre;
-                    document.getElementById('tseApellidos').textContent =
-                        (data.apellido1 || '') + ' ' + (data.apellido2 || '');
+                    document.getElementById('tseApellidos').textContent = (data.apellido1 || '') + ' ' + (data.apellido2 || '');
                     tseInfo.classList.add('visible');
+
+                    tseConfirmationLabel.textContent = `¿Eres ${data.nombre} ${data.apellido1}? (Si/No)`;
+                    tseConfirmation.classList.remove('hidden');
                 } else {
-                    // No encontrado - mostrar switch de extranjero
                     tseLookupDone = true;
                     extranjeroSwitch.classList.remove('hidden');
+                    setFieldsDisabled(false); // Enable fields for manual entry
                 }
             } catch (error) {
                 console.error('Error consultando TSE:', error);
                 tseLoading.style.display = 'none';
                 tseLookupDone = true;
                 extranjeroSwitch.classList.remove('hidden');
+                setFieldsDisabled(false);
             }
         }
+
+        // Listener for TSE confirmation switch
+        document.getElementById('tseConfirmSwitch').addEventListener('change', function(e) {
+            const isConfirmed = e.target.checked;
+            tseConfirmation.classList.add('hidden');
+
+            if (isConfirmed) { // "Sí"
+                userConfirmedTse = true;
+                // Enable only email, phone, sector
+                ['email', 'phone', 'sector'].forEach(id => document.getElementById(id).disabled = false);
+                document.getElementById('submitBtn').disabled = false;
+                // Name fields remain disabled as data is from TSE
+                document.getElementById('extranjeroFields').classList.remove('visible');
+            } else { // "No"
+                userConfirmedTse = false;
+                tseData = null; // Discard TSE data
+                tseInfo.classList.remove('visible');
+                document.getElementById('extranjeroFields').classList.add('visible');
+                setFieldsDisabled(false); // Enable all fields for manual input
+            }
+        });
 
         // Toggle extranjero fields
         document.getElementById('isExtranjero').addEventListener('change', function(e) {
@@ -504,61 +549,18 @@
             }
         });
 
-        // Solo numeros en telefono
-        document.getElementById('phone').addEventListener('input', function(e) {
-            e.target.value = e.target.value.replace(/[^0-9]/g, '').slice(0, 8);
-        });
 
-        // Mostrar alerta
-        function showAlert(message, type) {
-            const alert = document.getElementById('alert');
-            alert.textContent = message;
-            alert.className = 'alert alert-' + type;
-            alert.style.display = 'block';
-
-            if (type === 'success') {
-                setTimeout(() => {
-                    alert.style.display = 'none';
-                }, 5000);
-            }
-        }
-
-        // Mostrar error en campo
-        function showFieldError(field, message) {
-            const input = document.getElementById(field);
-            const error = document.getElementById(field + '-error');
-            if (input) input.classList.add('input-error');
-            if (error) {
-                error.textContent = message;
-                error.style.display = 'block';
-            }
-        }
-
-        // Limpiar errores
-        function clearErrors() {
-            document.querySelectorAll('.input-error').forEach(el => el.classList.remove('input-error'));
-            document.querySelectorAll('.error-text').forEach(el => {
-                el.style.display = 'none';
-                el.textContent = '';
-            });
-            document.getElementById('alert').style.display = 'none';
-        }
-
-        // Validar formulario
         function validateForm(data) {
             let isValid = true;
+            clearErrors();
 
-            // Validar cedula (9 digitos)
-            const rawCedula = data.cedula.replace(/[^0-9]/g, '');
-            if (rawCedula.length !== 9) {
+            if (!/^\d{9}$/.test(data.cedula.replace(/[^0-9]/g, ''))) {
                 showFieldError('cedula', 'La cedula debe tener 9 digitos');
                 isValid = false;
             }
 
-            // Si es extranjero, validar campos adicionales
-            const isExtranjero = document.getElementById('isExtranjero').checked;
-            if (isExtranjero) {
-                if (!data.nombre || data.nombre.trim() === '') {
+            if (!userConfirmedTse) { // Manual input validation
+                if (!data.name || data.name.trim() === '') {
                     showFieldError('nombre', 'El nombre es requerido');
                     isValid = false;
                 }
@@ -566,27 +568,18 @@
                     showFieldError('apellido1', 'El primer apellido es requerido');
                     isValid = false;
                 }
-            } else if (!tseData) {
-                // No es extranjero pero tampoco hay datos del TSE
-                if (tseLookupDone) {
-                    showFieldError('cedula', 'Verifique la cedula o marque como extranjero');
-                    isValid = false;
-                }
             }
 
-            // Validar email
             if (!/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(data.email)) {
                 showFieldError('email', 'Ingrese un correo valido');
                 isValid = false;
             }
 
-            // Validar telefono
             if (!/^\d{8}$/.test(data.phone)) {
                 showFieldError('phone', 'El telefono debe tener 8 digitos');
                 isValid = false;
             }
 
-            // Validar sector
             if (!data.sector) {
                 showFieldError('sector', 'Seleccione un sector');
                 isValid = false;
@@ -595,24 +588,27 @@
             return isValid;
         }
 
-        // Resetear formulario
-        function resetForm() {
-            document.getElementById('leadForm').reset();
+        function resetForm(fullReset = true) {
+            if (fullReset) {
+                document.getElementById('leadForm').reset();
+                lastCedulaLookup = '';
+            }
+            clearErrors();
+            setFieldsDisabled(true);
             tseData = null;
+            userConfirmedTse = false;
             tseLookupDone = false;
-            lastCedulaLookup = '';
             document.getElementById('tseInfo').classList.remove('visible');
             document.getElementById('tseLoading').style.display = 'none';
+            document.getElementById('tseConfirmation').classList.add('hidden');
+            document.getElementById('tseConfirmSwitch').checked = false;
             document.getElementById('extranjeroSwitch').classList.add('hidden');
             document.getElementById('extranjeroFields').classList.remove('visible');
+            document.getElementById('isExtranjero').checked = false;
         }
 
-        // Enviar formulario
         document.getElementById('leadForm').addEventListener('submit', async function(e) {
             e.preventDefault();
-            clearErrors();
-
-            const isExtranjero = document.getElementById('isExtranjero').checked;
 
             const formData = {
                 cedula: document.getElementById('cedula').value,
@@ -622,18 +618,15 @@
                 whatsapp: document.getElementById('phone').value
             };
 
-            // Agregar datos de nombre segun origen
-            if (tseData) {
-                // Datos del TSE
+            if (userConfirmedTse && tseData) {
                 formData.name = tseData.nombre;
                 formData.apellido1 = tseData.apellido1;
                 formData.apellido2 = tseData.apellido2;
                 formData.genero = tseData.genero;
-                if (tseData.fechaNacimiento && tseData.fechaNacimiento !== 'fallecido') {
+                 if (tseData.fechaNacimiento && tseData.fechaNacimiento !== 'fallecido') {
                     formData.fecha_nacimiento = tseData.fechaNacimiento;
                 }
-            } else if (isExtranjero) {
-                // Datos manuales de extranjero
+            } else {
                 formData.name = document.getElementById('nombre').value;
                 formData.apellido1 = document.getElementById('apellido1').value;
                 formData.apellido2 = document.getElementById('apellido2').value;
@@ -650,23 +643,16 @@
             try {
                 const response = await fetch(API_BASE_URL + '/api/leads', {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'Accept': 'application/json'
-                    },
+                    headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' },
                     body: JSON.stringify(formData)
                 });
-
                 const result = await response.json();
-
                 if (response.ok) {
                     showAlert('Lead registrado exitosamente!' + (result.opportunity ? ' Se creo una oportunidad automaticamente.' : ''), 'success');
                     resetForm();
                 } else {
-                    if (result.errors) {
-                        Object.keys(result.errors).forEach(field => {
-                            showFieldError(field, result.errors[field][0]);
-                        });
+                     if (result.errors) {
+                        Object.keys(result.errors).forEach(field => showFieldError(field, result.errors[field][0]));
                         showAlert('Por favor corrija los errores en el formulario.', 'error');
                     } else {
                         showAlert(result.message || 'Error al registrar el lead.', 'error');
@@ -680,6 +666,38 @@
                 submitBtn.textContent = 'Registrar Lead';
             }
         });
+
+        // Helper functions (showAlert, showFieldError, clearErrors, etc.)
+        // These can be placed here, assuming they are defined as in the original file
+        document.getElementById('phone').addEventListener('input', function(e) {
+            e.target.value = e.target.value.replace(/[^0-9]/g, '').slice(0, 8);
+        });
+        function showAlert(message, type) {
+            const alert = document.getElementById('alert');
+            alert.textContent = message;
+            alert.className = 'alert alert-' + type;
+            alert.style.display = 'block';
+            if (type === 'success') {
+                setTimeout(() => { alert.style.display = 'none'; }, 5000);
+            }
+        }
+        function showFieldError(field, message) {
+            const input = document.getElementById(field);
+            const error = document.getElementById(field + '-error');
+            if (input) input.classList.add('input-error');
+            if (error) {
+                error.textContent = message;
+                error.style.display = 'block';
+            }
+        }
+        function clearErrors() {
+            document.querySelectorAll('.input-error').forEach(el => el.classList.remove('input-error'));
+            document.querySelectorAll('.error-text').forEach(el => {
+                el.style.display = 'none';
+                el.textContent = '';
+            });
+            document.getElementById('alert').style.display = 'none';
+        }
     </script>
 </body>
 </html>
