--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -311,6 +311,37 @@
         .input-error {
             border-color: #dc2626;
         }
+
+        /* Confirmation Buttons */
+        #tse-confirmation-buttons {
+            display: flex;
+            gap: 8px;
+        }
+        .confirmation-btn {
+            padding: 8px 16px;
+            font-size: 14px;
+            font-weight: 600;
+            border-radius: 6px;
+            cursor: pointer;
+            border: 1px solid transparent;
+            transition: all 0.2s;
+        }
+        .yes-btn {
+            background-color: #22c55e;
+            color: white;
+            border-color: #16a34a;
+        }
+        .yes-btn:hover {
+            background-color: #16a34a;
+        }
+        .no-btn {
+            background-color: #ef4444;
+            color: white;
+            border-color: #dc2626;
+        }
+        .no-btn:hover {
+            background-color: #dc2626;
+        }
     </style>
 </head>
 <body>
@@ -344,10 +375,10 @@
             <!-- TSE Confirmation -->
             <div class="switch-group hidden" id="tseConfirmation">
                 <span class="switch-label" id="tseConfirmationLabel"></span>
-                <label class="switch">
-                    <input type="checkbox" id="tseConfirmSwitch">
-                    <span class="slider"></span>
-                </label>
+                <div id="tse-confirmation-buttons">
+                    <button type="button" id="tseConfirmNoBtn" class="confirmation-btn no-btn">No</button>
+                    <button type="button" id="tseConfirmYesBtn" class="confirmation-btn yes-btn">Sí</button>
+                </div>
             </div>
 
             <!-- Switch para extranjero -->
@@ -518,9 +549,9 @@
             }
         }
 
-        // Listener for TSE confirmation switch
-        document.getElementById('tseConfirmSwitch').addEventListener('change', function(e) {
-            const isConfirmed = e.target.checked;
+        // Listener for TSE confirmation buttons
+        document.getElementById('tseConfirmYesBtn').addEventListener('click', function() {
+            const isConfirmed = true;
             tseConfirmation.classList.add('hidden');
 
             if (isConfirmed) { // "Sí"
@@ -532,8 +563,14 @@
                 document.getElementById('extranjeroFields').classList.remove('visible');
                  // and ensure they are disabled
                 ['nombre', 'apellido1', 'apellido2'].forEach(id => document.getElementById(id).disabled = true);
+            }
+        });
 
-            } else { // "No"
+        document.getElementById('tseConfirmNoBtn').addEventListener('click', function() {
+            const isConfirmed = false;
+            tseConfirmation.classList.add('hidden');
+
+            if (!isConfirmed) { // "No"
                 userConfirmedTse = false;
                 tseData = null; // Discard TSE data
                 tseInfo.classList.remove('visible');
