--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -191,7 +191,7 @@
                      <div class="grid md:grid-cols-2 gap-4">
                         <div class="form-group">
                             <label for="phone" class="block text-sm font-medium text-foreground mb-1">Teléfono (WhatsApp) *</label>
-                            <input type="tel" id="phone" name="phone" placeholder="88887777" maxlength="8" required class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
+                            <input type="tel" id="phone" name="phone" placeholder="88887777" minlength="7"maxlength="15" required class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                             <p id="phone-error" class="hidden text-xs text-red-500 mt-1"></p>
                         </div>
                         <div class="form-group">
