agregar tse a form

--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -377,8 +377,8 @@
                 showFieldError('email', 'Ingrese un correo válido.');
                 isValid = false;
             }
-            if (!/^\d{8}$/.test(data.phone)) {
-                showFieldError('phone', 'El teléfono debe tener 8 dígitos.');
+            if (!/^\d{7,15}$/.test(data.phone)) {
+                showFieldError('phone', 'El teléfono debe tener entre 7 y 15 dígitos.');
                 isValid = false;
             }
             if (!data.sector) {
