--- a/backend/public/lead-form.html
+++ b/backend/public/lead-form.html
@@ -175,8 +175,8 @@
                             <label for="genero" class="block text-sm font-medium text-foreground mb-1">Género</label>
                             <select id="genero" name="genero" class="w-full px-3 py-2 bg-background border border-input rounded-md text-sm">
                                 <option value="">Seleccione el género</option>
-                                <option value="1">Masculino</option>
-                                <option value="2">Femenino</option>
+                                <option value="masculino">Masculino</option>
+                                <option value="femenino">Femenino</option>
                             </select>
                             <p id="genero-error" class="hidden text-xs text-red-500 mt-1"></p>
                         </div>
